--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "multer-s3": "^2.9.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "pusher": "^3.0.1"
   }
 }
