--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "aws-sdk": "^2.753.0",
     "bcrypt": "^5.0.0",
+    "btoa": "^1.2.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
