--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,8 @@
-runtime: nodejs
-env: flex
-automatic_scaling:
-    min_num_instances: 1
-    max_num_instances: 7
+runtime: nodejs12
+env: standard
+
+handlers:
+- url: /.*  
+  script: auto  
+  secure: always  
+  redirect_http_response_code: 301
