--- a/package.json
+++ b/package.json
@@ -19,17 +19,22 @@
   "homepage": "https://github.com/Fabro0/lurien-backend#readme",
   "dependencies": {
     "aws-sdk": "^2.753.0",
+    "axios": "^0.20.0",
     "bcrypt": "^5.0.0",
     "btoa": "^1.2.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "firebase": "^7.22.1",
+    "firebase-admin": "^9.2.0",
     "mongoose": "^5.10.5",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "pusher": "^3.0.1"
+    "pusher": "^3.0.1",
+    "request": "^2.88.2",
+    "xhr2": "^0.2.0"
   }
 }
