--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pusher": "^3.0.1",
+    "qrcode": "^1.4.4",
     "request": "^2.88.2",
     "xhr2": "^0.2.0"
   }
